tests/error_handling/syntax_errors/test2.lang
main() {
    Int a = 0b1111;
    while (a > 0) {
        // Empty codeblock (skip operator expected)
    }
}